# serverless-lambda-python-monorepo

./: .gitignore  .gitpod.yml  README.md  package.json
services/first/: package.json  pyproject.toml  serverless.yml
services/first/src/: handler.py
services/pycommon/: package.json  pyproject.toml
services/pycommon/lib/: __init__.py  logger.py  mapper.py
services/pycommon/test/: test_mapper.py
services/second/: package.json  pyproject.toml  serverless.yml
services/second/src/: handler.py
services/second/test/: test_handler.py
